# Projeto_Final_PI

./: .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: action.yml  deploy.yml
agendadoce/: admin.py  apps.py  forms.py  models.py  views.py
agendadoce/migrations/: 0001_initial.py  0002_alter_pedido_status.py  0002_initial.py  0003_alter_pedido_recheio_alter_pedido_status_and_more.py
agendadoce/templates/: index.html
agendadoce/templates/cliente/: form_cliente.html  listar_cliente.html
agendadoce/templates/entregador/: delete_entregador.html  detail_entregador.html  form_entregador.html  listar_entregador.html
agendadoce/templates/includes/: cliente_pagination.html  entregador_pagination.html  pagination.html  pedido_pagination.html
agendadoce/templates/pedido/: delete_pedido.html  detail_pedido.html  form_pedido.html  listar_pedido.html
cliente/: admin.py  forms.py  models.py  urls.py  views.py
cliente/migrations/: 0001_initial.py
cliente/templates/clientes/: create_cliente.html  delete_usuario.html  detail_cliente.html  historico_cliente.html  listar_cliente.html  login.html  update_cliente.html
compose/django/: start.sh
main/: settings.py  urls.py
static/: styles.css
templates/: base.html  index.html  login.html
